@@ -5,6 +5,7 @@ Alpha Rv.4
 * Added Downloads Mod
 * Added placeto_cache_clear() to Cache Mod
 * Added Sitemap mod
+* Added multiple site support
 
 Alpha Rv.3
 * Added security by rename mod's index.php to mod.php
